fixed alignment

--- a/src/CSS/Landing.scss
+++ b/src/CSS/Landing.scss
@@ -245,6 +245,11 @@
             padding: 15px 0;
           }
         }
+        &_grid {
+          display: flex;
+          flex-direction: column;
+          gap: 0
+        }
       }
 
     }
